# evolution-of-todo-app

./: README.md  main.py  manual_test.py  pyproject.toml
.specify/memory/: constitution.md
history/prompts/001-todo-cli/: 001-create-todo-cli-specification.spec.prompt.md  002-create-architectural-plan.plan.prompt.md  003-generate-implementation-tasks.tasks.prompt.md
specs/001-todo-cli/: plan.md  spec.md  tasks.md
specs/001-todo-cli/checklists/: requirements.md  tasks.md
src/: __init__.py  main.py
src/cli/: __init__.py  formatters.py  menu.py
src/models/: task.py
src/services/: task_manager.py
tests/integration/: test_cli_flow.py
tests/unit/: test_formatters.py  test_task.py  test_task_manager.py
